--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    margin: 0;
 }
 
 /* Left Column */
@@ -67,7 +68,7 @@
 }
 
 .searchbar {
-    /* width: 280px; */
+    /* width: 360px; */
     max-width: 700px;
     background: #b1b1b1;
     display: flex;
@@ -75,6 +76,7 @@
     border-radius: 20px;
     /* padding: 5px 5px; */
     margin-top: 60px;
+    /* margin-left: 40px; */
 }
 
 ::placeholder{
@@ -112,6 +114,7 @@
 /* Flex Box for the Pokemon cards*/
 .flexbox-container {
     display: flex;
+    padding: 40px;
 }
 
 .flexbox-item {
@@ -129,6 +132,7 @@
     box-shadow: 5px 5px 15px 5px #000000;
     width: 680px;
     min-height: 50px;
+    column-gap: 32px;
 }
 
 .column-one {
@@ -145,11 +149,12 @@
 .column-one h3 {
     font-size: 44px;
     margin: 0;
-    margin-left: 5%;
+    margin-bottom: 10px;
+    /* margin-left: 5%; */
 }
 
 .column-one {
-    margin-left: 5%;
+    /* margin-left: 5%; */
 }
 
 .column-two {
@@ -161,12 +166,15 @@
 .column-two h3 {
     font-size: 18px;
     margin-bottom: 10px;
+    margin-top: 10px;
+    text-align: left;
 }
 
 .column-two p {
     font-size: 14px;
     margin-top: 6px;
     margin-bottom: 10px;
+    text-align: left;
 }
 
 .column-three {
@@ -179,6 +187,8 @@
     font-size: 14px;
     margin-top: 6px;
     margin-bottom: 10px;
+    text-align: left;
+    margin-top: 11px;
 }
 
 @media screen and (max-width: 768px) {
