--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
     justify-content: center;
 }
 
-.searchbar input {
+#searchbar input {
     background: transparent;
     flex: 1;
     border: 0;
@@ -67,7 +67,7 @@
     color: #ffcb05;
 }
 
-.searchbar {
+#searchbar {
     /* width: 360px; */
     max-width: 700px;
     background: #b1b1b1;
@@ -83,7 +83,7 @@
     color: #ffcb05;
 }
 
-.searchbar button{
+#searchbar button{
     border: 0;
     border-radius: 20%;
     width: 50px;
@@ -92,7 +92,7 @@
     cursor: pointer;
 }
 
-.searchbar button img{
+#searchbar button img{
     width: 22px;
 }
 
