--- a/style.css
+++ b/style.css
@@ -65,14 +65,14 @@
     outline: none;
     padding: 16px;
     font-size: 18px;
-    color: #bf9900;
+    color: #977900;
 }
 
 #pokemonName {
     width: 200px;
     height: 36px;
     max-width: 700px;
-    background: #b1b1b1;
+    background: #E4E5EA;
     display: flex;
     align-items: center;
     border-radius: 10px;
