--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ input {
     display: flex;
     font-family: 'Fira Sans', sans-serif;
     border: 2px solid #000000;
-    padding: 18px;
+    padding: 30px;
     box-shadow: 5px 5px 15px 5px #000000;
     width: 680px;
     min-height: 50px;
@@ -178,17 +178,17 @@ input {
 }
 
 .column-one {
-    width: 30%;
-    min-height: 50px;
+    width: 180px;
+    height: 120px;
     /* background-color: blue; */
 }
 
 .column-one img {
-    width: 180px;
+    width: 140px;
 }
 
 .column-one h2 {
-    font-size: 44px;
+    font-size: 34px;
     margin: 0;
     /* margin-left: 5%; */
 }
